# st-deploycenter

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Procfile  README.md  SECURITY.md  compose.yaml  cron.json
src/backend/: .pylintrc  Dockerfile  entrypoint  gunicorn.conf.py  manage.py  pyproject.toml
src/backend/core/: admin.py  apps.py  enums.py  factories.py  models.py  signals.py  urls.py  utils.py  webhooks.py
src/backend/core/api/: __init__.py  filters.py  permissions.py  serializers.py
src/backend/core/api/viewsets/: __init__.py  accounts.py  config.py  entitlements.py  lagaufre.py  metrics.py  operator.py  organization.py  service.py  task.py  user.py
src/backend/core/authentication/: __init__.py  backends.py  urls.py
src/backend/core/entitlements/resolvers/: __init__.py  access_entitlement_resolver.py  admin_entitlement_resolver.py  drive_access_entitlement_resolver.py  drive_storage_entitlement_resolver.py  entitlement_resolver.py  extended_admin_entitlement_resolver.py  meet_access_entitlement_resolver.py  messages_admin_entitlement_resolver.py  messages_storage_entitlement_resolver.py
src/backend/core/management/commands/: create_demo_operator.py  demo_data.py  dev.py  print_sessions.py  run_task.py
src/backend/core/migrations/: 0001_initial.py  0002_operatorserviceconfig_service_operators_and_more.py  0003_add_organization_search_index.py  0004_alter_service_options_alter_organization_code_insee.py  0005_servicesubscription_operator.py  0006_entitlement.py  0006_entitlement_alter_metric_unique_together_and_more.py  0006_operator_config_and_more.py  0007_service_api_key.py  0007_servicesubscription_is_active.py  0008_alter_servicesubscription_unique_together.py  0008_metric_account_id_metric_account_type.py  0008_operator_config_and_more.py  0009_alter_metric_unique_together_and_more.py  0009_service_required_services.py  0010_alter_metric_unique_together_and_more.py  0010_remove_operator_scope_and_more.py  0011_remove_metric_unique_metric_without_account_and_more.py  0011_service_instance_name.py  0012_account_accountservicelink_and_more.py  0012_alter_entitlement_account_id_and_more.py  0012_alter_service_instance_name.py  0013_account_accountservicelink_and_more.py  0013_alter_metric_account.py  0013_remove_service_api_key.py  0014_account_unique_account_external_id_per_org_type_and_more.py  0014_remove_metric_unique_metric_with_account_id_and_more.py  0015_accountservicelink_single_role_per_row.py  0015_add_scope_to_accountservicelink.py  0015_remove_metric_unique_metric_with_account_and_more.py  0016_operator_siret.py  0016_remove_metric_unique_metric_without_account_and_more.py  0017_operator_name_with_article_operator_status_and_more.py  0017_remove_metric_unique_metric_with_account_and_more.py  0018_operator_org_role_admin_flag.py  0018_remove_entitlement_account_id_entitlement_account.py  0019_external_management_api_key.py
src/backend/core/services/: __init__.py  drive_service_handler.py  messages_service_handler.py  service_handler.py
src/backend/core/tasks/: __init__.py  datagouv.py  dpnt.py  metrics.py
src/backend/core/tests/: conftest.py  test_dpnt_import.py  test_metrics_scraping.py  test_settings.py  test_usage_metrics_scraping.py  test_webhooks.py  utils.py
src/backend/core/tests/api/: conftest.py  test_accounts_filtering.py  test_accounts_reconciliation.py  test_check_subscription.py  test_config.py  test_entitlements.py  test_entitlements_adc.py  test_metrics.py  (+18 more)
src/backend/deploycenter/: __init__.py  celery_app.py  settings.py  urls.py  wsgi.py
(+93 files in other folders)
